force-app/main/default/objects/OppKitchen__c/OppKitchen__c.object-meta.xml
<CustomObject>
    <description>Additional information for kitchen opportunities. Originally designed for the US, but can (and will) be extended.</description>
    <label>Opportunity Kitchen</label>
    <nameField>
        <label>Kitchen Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Kitchens</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>