force-app/main/default/objects/OppKitchen__c/fields/BuildingType__c.field-meta.xml
<CustomField>
    <fullName>BuildingType__c</fullName>
    <label>Building Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BuildingTypes</valueSetName>
    </valueSet>
</CustomField>