force-app/main/default/objects/OppKitchen__c/fields/EstimatedInstallation__c.field-meta.xml
<CustomField>
    <fullName>EstimatedInstallation__c</fullName>
    <label>Estimated Installation</label>
    <type>Date</type>
</CustomField>