force-app/main/default/objects/OppKitchen__c/fields/FloorNumber__c.field-meta.xml
<CustomField>
    <fullName>FloorNumber__c</fullName>
    <label>Floor Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>