force-app/main/default/objects/OppKitchen__c/fields/KitchenDesigner__c.field-meta.xml
<CustomField>
    <fullName>KitchenDesigner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kitchen Designer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Kitchens1</relationshipName>
    <type>Lookup</type>
</CustomField>