force-app/main/default/objects/OppKitchen__c/fields/KitchenManager__c.field-meta.xml
<CustomField>
    <fullName>KitchenManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Kitchen Manager</description>
    <label>Kitchen Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Kitchens</relationshipName>
    <type>Lookup</type>
</CustomField>