force-app/main/default/objects/OppKitchen__c/fields/PricingCondition__c.field-meta.xml
<CustomField>
    <fullName>PricingCondition__c</fullName>
    <label>Pricing Condition</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promotional</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
                <default>true</default>
                <label>Regular</label>
            </value>
            <value>
                <fullName>PR1</fullName>
                <isActive>false</isActive>
                <label>PR1</label>
            </value>
            <value>
                <fullName>PR2</fullName>
                <isActive>false</isActive>
                <label>PR2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>