force-app/main/default/objects/OppKitchen__c/fields/ProductLine2__c.field-meta.xml
<CustomField>
    <fullName>ProductLine2__c</fullName>
    <label>Product Line</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discontinued Lines</fullName>
            </value>
            <value>
                <fullName>Emotion</fullName>
            </value>
            <value>
                <fullName>Emotion Wardrobes</fullName>
            </value>
            <value>
                <fullName>Fusion Wardrobes</fullName>
            </value>
            <value>
                <fullName>New Project</fullName>
            </value>
            <value>
                <fullName>New Residence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>