force-app/main/default/objects/OppKitchen__c/fields/ProductQuoted__c.field-meta.xml
<CustomField>
    <fullName>ProductQuoted__c</fullName>
    <description>DEPRECATED</description>
    <inlineHelpText>DEPRECATED</inlineHelpText>
    <label>Product Quoted</label>
    <length>60</length>
    <type>Text</type>
</CustomField>