force-app/main/default/objects/OppKitchen__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>Product Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kitchen</fullName>
                <default>true</default>
                <label>Kitchen</label>
            </value>
            <value>
                <fullName>Vanity</fullName>
            </value>
            <value>
                <fullName>Closet</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>P1</fullName>
                <isActive>false</isActive>
                <label>P1</label>
            </value>
            <value>
                <fullName>P2</fullName>
                <isActive>false</isActive>
                <label>P2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>