force-app/main/default/objects/OppKitchen__c/fields/RetainerFee__c.field-meta.xml
<CustomField>
    <fullName>RetainerFee__c</fullName>
    <label>Retainer Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>