force-app/main/default/objects/OppKitchen__c/fields/SAPDeposit__c.field-meta.xml
<CustomField>
    <fullName>SAPDeposit__c</fullName>
    <description>SAP Deposit</description>
    <label>Retainer SAP Order No</label>
    <length>15</length>
    <type>Text</type>
</CustomField>