force-app/main/default/objects/OppKitchen__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QUALIFICATION</fullName>
                <default>true</default>
                <label>QUALIFICATION</label>
            </value>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>RETAINER-RECEIVED</fullName>
            </value>
            <value>
                <fullName>DESIGN-PROPOSAL</fullName>
            </value>
            <value>
                <fullName>DEPOSIT-RECEIVED</fullName>
            </value>
            <value>
                <fullName>SHOP DRAWINGS</fullName>
            </value>
            <value>
                <fullName>DRAWINGS-SIGNED</fullName>
            </value>
            <value>
                <fullName>IN-PRODUCTION</fullName>
            </value>
            <value>
                <fullName>IN-TRANSIT</fullName>
            </value>
            <value>
                <fullName>ARRIVED</fullName>
            </value>
            <value>
                <fullName>DELIVERED</fullName>
            </value>
            <value>
                <fullName>INSTALLATION</fullName>
            </value>
            <value>
                <fullName>PUNCH-LIST</fullName>
            </value>
            <value>
                <fullName>LOST</fullName>
            </value>
            <value>
                <fullName>CLOSED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>